--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Replit user <<>>"]
 python = "^3.8"
 Flask = "^2.2.2"
 gevent = "^22.10.2"
+pickleDB = "^0.9.2"
 
 [tool.poetry.dev-dependencies]
 
